dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ecif_main.cpp)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(front, 1.0.0)

dnl Checks for programs.
AC_LANG_COMPILER
AM_SANITY_CHECK
AC_ISC_POSIX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_C_BIGENDIAN

dnl look for default cc
AC_PROG_CPP
AC_PROG_CXX
AC_SUBST(AM_FCFLAGS) 
AM_MAINTAINER_MODE
AC_STDC_HEADERS

AC_PATH_X

LIBS="$LIBS -lX11 -L$x_libraries -L$prefix/lib "
CFLAGS="$CFLAGS -I$prefix/include -I$x_includes"
CXXFLAGS="$CXXFLAGS -I$prefix/include $CXXFLAGS -I$x_includes -I$x_includes/X11"

sinclude(acx_elmer.m4)
sinclude(ax_check_gl.m4)
sinclude(ax_check_glu.m4)
sinclude(ax_lang_compiler_ms.m4)
sinclude(acx_pthread.m4)
sinclude(acx_check_tcltk.m4)

AC_CHECK_LIB(stdc++, main,,AC_MSG_WARN(libstdc++ not found))
AC_CHECK_LIB(m, sin,,AC_MSG_ERROR(elmer fron the math library))
ACX_EIOC([], [AC_MSG_ERROR([libeioc not found, using local one instead])])
ACX_MATC([], [AC_MSG_ERROR([libmatc $ELMER_LIBERRORMSG])])
AC_CHECK_LIB(front, emf_readDataCB,,AC_MSG_ERROR(elmer requires libfront),[$MATC_LIBS $EIO_LIBS -lm])
AX_CHECK_GL([],[AC_MSG_ERROR([OpenGL not found.])])
AX_CHECK_GLU([],[AC_MSG_ERROR([GLU not found.])])
dnl ACX_CHECK_TCL([],[AC_MSG_ERROR([Tcl not found.])])
dnl ACX_CHECK_TK([],[AC_MSG_ERROR([Tk not found.])])


LIBS="$MATC_LIBS $EIOC_LIBS -lfront $LIBS $GL_LIBS $GLU_LIBS"
CFLAGS="$CFLAGS $GL_CFLAGS $GLU_CFLAGS"
CXXFLAGS="$CXXFLAGS $GL_CFLAGS $GLU_CFLAGS"

dnl Checks for header files.

AC_CONFIG_HEADER(config.h) 
AC_OUTPUT([
Makefile
include/Makefile
src/Makefile
])
