dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/frontlib.cpp)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(frontlib, 1.0.0)

AC_LANG_COMPILER

dnl Checks for programs.

AM_SANITY_CHECK
AC_ISC_POSIX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_C_BIGENDIAN

dnl look for default cc
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_SUBST(AM_FCFLAGS) 

AM_MAINTAINER_MODE

dnl Checks for header files.
AC_STDC_HEADERS

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile
include/Makefile
src/Makefile
])
