dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/huti_cg.src)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(hutiter, 1.0.0)

AC_LANG_COMPILER

dnl Checks for programs.
AC_PROG_RANLIB
dnl AC_PROG_LIBTOOL

AM_SANITY_CHECK
AC_ISC_POSIX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_C_BIGENDIAN

dnl AC_PROG_LIBTOOL

dnl look for default cc
AC_PROG_CC

dnl look for default fortran compiler (should we also define the standard?)
dnl others to look for: F77, 
AC_PROG_FC
dnl ([g95 f90 f77 xlf77 cf77 fort77 f90 xlf90])
AC_LANG_PREPROC(Fortran 90)
AC_F77_LIBRARY_LDFLAGS
AC_FC_LIBRARY_LDFLAGS
AC_F77_DUMMY_MAIN
AC_FC_DUMMY_MAIN
AC_ISC_POSIX

dnl This isn't done very nicely right now. The correct way to proceed would be to 
dnl get rid of the complicated preprocessing and c-code that is done to fit the symbol names.
AC_F77_WRAPPERS
AC_FC_WRAPPERS
dnl _AC_F77_NAME_MANGLING
dnl The alternatives in the cases here could be left over from a previous
dnl config.cache -- autoconf changed.
dnl lower case / upper case:
dnl    case translation of the Fortran symbols
dnl underscore / no underscore:
dnl    whether the compiler appends "_" to symbol names
dnl extra underscore / no extra underscore:
dnl    whether the compiler appends an extra "_" to symbol names already
dnl    containing at least one underscore

case "$ac_cv_f77_mangling" in
  "upper case, no underscore, no extra underscore" | \
  "upper case, no underscores")
    AC_DEFINE(LINKTYP, 2, "Mangling: upper case, no underscore, no extra underscore") ;;
  "lower case, no underscore, no extra underscore" | \
  "lower case, no underscores" )
    AC_DEFINE(LINKTYP, 3, "Mangling: lower case, no underscore, no extra underscore") ;;
  "lower case, underscore, no extra underscore" | \
  "lower case, single underscores")
    AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, no extra underscore") ;;
  "lower case, underscore, extra underscore" | \
  "lower case, double underscores")
    AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, extra underscore") ;;
  *)
    AC_MSG_ERROR([Unknown sort of Fortran name mangling]) ;;
esac

dnl discard gnu-style second underscore

dnl AM_FCFLAGS="-fno-second-underscore"

AC_SUBST(AM_FCFLAGS) 

AM_MAINTAINER_MODE

dnl Checks for header files.
AC_STDC_HEADERS

dnl  Checks for BLAS and LAPACK libraries:
dnl sinclude(acx_blas.m4)
dnl sinclude(acx_lapack.m4)

ACX_BLAS([], [AC_MSG_ERROR([BLAS was not found!])])
ACX_LAPACK([], [AC_MSG_ERROR([LAPACK was not found!])])

LIBS="$BLAS_LIBS $LAPACK_LIBS $LIBS $FCLIBS $FLIBS"

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile

include/Makefile

examples/Makefile
examples/ex1/Makefile

src/Makefile])
