AC_INIT(src/huti_cg.src)

dnl AC_PREREQ(2.59c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(eio, 1.0.0)

AC_LANG_COMPILER

AC_PROG_CXX
AC_PROG_CC

AC_STDC_HEADERS

AM_MAINTAINER_MODE

AC_PROG_RANLIB

AC_PROG_FC
AC_PROG_F77
AC_F77_WRAPPERS
AC_FC_WRAPPERS

case "$ac_cv_fc_mangling" in
  "upper case, no underscore, no extra underscore" | \
  "upper case, no underscores")
    AC_DEFINE(LINKTYP, 2, "Mangling: upper case, no underscore, no extra underscore") ;;
  "lower case, no underscore, no extra underscore" | \
  "lower case, no underscores" )
    AC_DEFINE(LINKTYP, 3, "Mangling: lower case, no underscore, no extra underscore") ;;
  "lower case, underscore, no extra underscore" | \
  "lower case, single underscores")
    AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, no extra underscore") ;;
  "lower case, underscore, extra underscore" | \
  "lower case, double underscores")
    AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, extra underscore") ;;
  *)
    AC_MSG_ERROR([Unknown sort of Fortran name mangling. You compiler is most likely not worthy of existence, all attempts to use is are futile.]) ;;
esac

LIBS="$LIBS -L$prefix/lib"
CFLAGS="$CFLAGS -I$prefix/include"
CXXFLAGS="$CXXFLAGS -I$prefix/include"
FCFLAGS="$FCFLAGS -I. -I$prefix/include"


sinclude(acx_blas.m4)
sinclude(acx_lapack.m4)
ACX_BLAS([], [AC_MSG_ERROR([BLAS was not found!])])
ACX_LAPACK([], [AC_MSG_ERROR([LAPACK was not found!])])

LIBS="$BLAS_LIBS $LAPACK_LIBS $LIBS $FCLIBS $FLIBS"

case "$FC" in
  *xlf*)
    FCFLAGS="$FCFLAGS -qsuffix=cpp=F90"
  ;;
esac

AC_CONFIG_HEADER(config.h) 

AC_SUBST(AM_FCFLAGS) 
AC_SUBST(FCFLAGS)

AC_OUTPUT([
Makefile
include/Makefile
examples/Makefile
examples/ex1/Makefile
src/Makefile])
