dnl Process this file with autoconf to produce a configure script.

dnl TODO: get fortran name mangling sceme and use it in the fortran api (spfortran.c) 
dnl using the convenience macros provided by automake

AC_INIT(src/eig.c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(matc, 1.0.0)

AC_LANG_COMPILER

dnl Checks for programs.
AC_PROG_RANLIB

AM_SANITY_CHECK
AC_ISC_POSIX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_C_BIGENDIAN

AC_CHECK_LIB(m,main)
AC_CHECK_LIB(ncurses,main)
AC_HAVE_HEADERS(math.h)

sinclude(acx_readline.m4)
ACX_GET_TERM
ACX_ENABLE_READLINE

dnl AC_PROG_LIBTOOL

dnl look for default cc
AC_PROG_CC
AC_ISC_POSIX

AM_MAINTAINER_MODE

dnl Checks for header files.
AC_STDC_HEADERS

AC_OUTPUT([
Makefile
src/Makefile
])
