dnl Process this file with autoconf to produce a configure script.

dnl TODO: get fortran name mangling sceme and use it in the fortran api (spfortran.c) 
dnl using the convenience macros provided by automake

AC_INIT(src/eig.c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(matc, 1.0.0)

dnl default optimization flags
sinclude(acx_elmer.m4)
ACX_DEBUG

dnl Checks for programs.
AC_PROG_RANLIB

AC_PROG_CC
AC_STDC_HEADERS

ACX_CHECK_B64FLAGS

AC_CHECK_LIB(m,main)
AC_CHECK_LIB(curses,main)
AC_HAVE_HEADERS(math.h)

sinclude(acx_readline.m4)
ACX_GET_TERM
ACX_ENABLE_READLINE

AM_MAINTAINER_MODE

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile
src/Makefile
])
