AC_INIT(src/blas/dgemm.f)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(mathlibs, 1.0.0)

AM_MAINTAINER_MODE

sinclude(acx_elmer.m4)
ACX_DEBUG

AC_PROG_RANLIB
AC_PROG_F77([xlf pathf90 ifort f77 g77])

ACX_CHECK_B64FLAGS

AC_OUTPUT([
Makefile
src/Makefile
src/blas/Makefile
src/lapack/Makefile
]
)

AC_MSG_RESULT([
BLAS and LAPACK build options:

Use environment variables F77 and FFLAGS to 
change these.

Compiler:
  Fortran compiler          $F77
  Fortran flags             $FFLAGS
]);
