dnl Process this file with autoconf to produce a configure script.

dnl TODO: get fortran name mangling sceme and use it in the fortran api (spfortran.c) 
dnl using the convenience macros provided by automake


AC_INIT(spfactor.c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(sparse, 1.3.1)

AC_LANG_COMPILER

dnl Checks for programs.
AC_PROG_RANLIB

AM_SANITY_CHECK
AC_ISC_POSIX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_C_BIGENDIAN

dnl AC_PROG_LIBTOOL

dnl look for default cc
AC_PROG_CC
AC_ISC_POSIX

AM_MAINTAINER_MODE

dnl Checks for header files.
AC_STDC_HEADERS

AC_OUTPUT([
Makefile
])
