dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/amd/amd.f)

dnl the fortran stuff needs to be pretty new to work on SunOS
AC_PREREQ(2.50)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(umfpack, 4.4)
AM_MAINTAINER_MODE

sinclude(acx_elmer.m4)
ACX_HOST
ACX_DEBUG
dnl ACX_PROG_TRADITIONAL_CPP

AC_PROG_RANLIB

AC_PROG_CC([xlc pathcc icc cc gcc])
AC_PROG_F77([xlf pathf90 ifort f77 g77])

ACX_CHECK_B64FLAGS

AC_STDC_HEADERS
AC_CONFIG_HEADER(config.h)

AC_OUTPUT([
Makefile
src/Makefile
src/amd/Makefile
src/amd/include/Makefile
src/umfpack/Makefile
src/umfpack/include/Makefile
])
